--- a/css/styles.css
+++ b/css/styles.css
@@ -355,4 +355,8 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
 }
+
+.footer-social-media {
+ 
+}
 /* ============= /FOOTER STYLES ============= */
