--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,9 @@ img {
 
 /* ============= HERO SECTION STYLES ============= */
 .hero-section {
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 188px 0px;
   background-color: #2e2f42;
   background-image: linear-gradient(
@@ -212,6 +215,9 @@ img {
   width: calc((100% - 3 * 24px) / 4);
 }
 
+.icon {
+}
+
 .benefits-list-title {
   margin-bottom: 8px;
   font-weight: 500;
@@ -250,6 +256,8 @@ img {
   width: calc((100% - 3 * 24px) / 4);
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-member-card {
@@ -297,6 +305,8 @@ img {
 
 .porfolio-list-item {
   width: calc((100% - 48px) / 3);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-card {
@@ -357,6 +367,5 @@ img {
 }
 
 .footer-social-media {
- 
 }
 /* ============= /FOOTER STYLES ============= */
