--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,8 @@ img {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -77,6 +79,23 @@ img {
   display: flex;
   align-items: center;
   gap: 40px;
+}
+
+.menu-link {
+  position: relative;
+  color: #404bbf;
+}
+
+.menu-link::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+  transition: color 250ms cubic-bezier(04, 0, 0.2, 1);
 }
 
 .header-logo {
@@ -129,6 +148,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(04, 0, 0.2, 1);
 }
 
 .contact-link:hover,
@@ -182,6 +202,7 @@ img {
   letter-spacing: 0.04em;
   color: #ffffff;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-button:hover,
@@ -297,7 +318,7 @@ img {
 .social-list {
   display: flex;
   justify-content: center;
-  column-gap: 16px;
+  gap: 24px;
 }
 
 .social-list-link {
@@ -311,9 +332,9 @@ img {
   fill: #fff;
 }
 
-.icon {
-  width: 16px;
-  height: 16px;
+.social-list-link:hover
+.social-list-link:focus {
+  background-color: #404bbf;
 }
 
 /* ============= /TEAM SECTION STYLES ============= */
@@ -357,8 +378,8 @@ img {
   padding-top: 40px;
   padding-left: 32px;
   padding-right: 32px;
-  color: #F4F4FD;
-  background-color: #4D5AE5;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -450,6 +471,6 @@ img {
 }
 
 .footer-media-link:hover {
-  background-color: #31D0AA;
+  background-color: #31d0aa;
 }
 /* ============= /FOOTER STYLES ============= */
