--- a/css/styles.css
+++ b/css/styles.css
@@ -81,14 +81,14 @@ img {
   gap: 40px;
 }
 
-.menu-link {
+.menu-link.current {
   position: relative;
   color: #404bbf;
 }
 
 .menu-link::after {
   position: absolute;
-  content: "";
+  content: '';
   width: 100%;
   left: 0;
   bottom: -1px;
@@ -286,6 +286,10 @@ img {
   width: calc((100% - 3 * 24px) / 4);
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-member-item:hover {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
@@ -330,10 +334,10 @@ img {
   border-radius: 50%;
   background-color: #4d5ae5;
   fill: #fff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover
-.social-list-link:focus {
+.social-list-link:hover .social-list-link:focus {
   background-color: #404bbf;
 }
 
@@ -370,14 +374,14 @@ img {
 
 .portfolio-overlay {
   position: absolute;
-  top: -2px;
-  left: -2px;
-  width: calc(100% + 2px);
-  height: calc(100% + 2px);
+  top: 0;
+  width: 100%;
+  height: 100%;
   overflow: auto;
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #f4f4fd;
   background-color: #4d5ae5;
   transform: translateY(100%);
@@ -421,6 +425,11 @@ img {
 }
 .footer-container {
   display: flex;
+  align-items: baseline;
+}
+
+.footer-logo-box {
+  margin-right: 120px;
 }
 
 .footer-logo {
@@ -452,6 +461,15 @@ img {
   margin-left: 120px;
 }
 
+.page-footer-social-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  color: #f4f4fd;
+}
+
 .footer-media-list {
   display: flex;
   align-items: center;
@@ -468,9 +486,15 @@ img {
   border-radius: 50%;
   background-color: #4d5ae5;
   fill: #fff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-media-link:hover {
+.footer-media-link:hover .footer-media-link:focus {
   background-color: #31d0aa;
 }
+
+.footer-icon {
+  fill: #f4f4fd;
+}
+
 /* ============= /FOOTER STYLES ============= */
