--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ img {
   color: #404bbf;
 }
 
-.menu-link::after {
+.menu-link.current::after {
   position: absolute;
   content: '';
   width: 100%;
@@ -246,6 +246,11 @@ img {
   width: 264px;
   height: 112px;
   background: #f4f4fd;
+}
+
+.benefits-icon {
+  width: 64px;
+  height: 64px;
 }
 
 .benefits-list-title {
@@ -467,7 +472,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin-bottom: 16px;
-  color: #f4f4fd;
+  color: #ffffff;
 }
 
 .footer-media-list {
@@ -477,19 +482,24 @@ img {
   margin-top: 16px;
 }
 
+.footer-media-item {
+  width: 40px;
+  height: 40px;
+}
+
 .footer-media-link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   background-color: #4d5ae5;
-  fill: #fff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-media-link:hover .footer-media-link:focus {
+.footer-media-link:hover
+.footer-media-link:focus {
   background-color: #31d0aa;
 }
 
