--- a/css/styles.css
+++ b/css/styles.css
@@ -81,23 +81,6 @@ img {
   gap: 40px;
 }
 
-.menu-link.current {
-  position: relative;
-  color: #404bbf;
-}
-
-.menu-link.current::after {
-  position: absolute;
-  content: '';
-  width: 100%;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-  transition: color 250ms cubic-bezier(04, 0, 0.2, 1);
-}
-
 .header-logo {
   padding: 24px 0;
   margin-right: 76px;
@@ -122,11 +105,28 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-link:hover,
 .menu-link:focus {
   color: #404bbf;
+}
+
+.menu-link.current {
+  position: relative;
+  color: #404bbf;
+}
+
+.menu-link.current::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 
 .page-contacts {
@@ -148,7 +148,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  transition: color 250ms cubic-bezier(04, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link:hover,
@@ -371,7 +371,7 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-..porfolio-list-item:hover ..porfolio-list-item:focus {
+.porfolio-list-item:hover .porfolio-list-item:focus {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
