--- a/css/styles.css
+++ b/css/styles.css
@@ -291,6 +291,7 @@ img {
   width: calc((100% - 3 * 24px) / 4);
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -346,6 +347,11 @@ img {
   background-color: #404bbf;
 }
 
+.icon {
+  width: 16px;
+  height: 16px;
+}
+
 /* ============= /TEAM SECTION STYLES ============= */
 
 /* ============= PORTFOLIO SECTION STYLES ============= */
@@ -372,8 +378,7 @@ img {
 }
 
 .porfolio-list-item:hover .porfolio-list-item:focus {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-image {
@@ -502,12 +507,13 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-media-link:hover
-.footer-media-link:focus {
+.footer-media-link:hover .footer-media-link:focus {
   background-color: #31d0aa;
 }
 
 .footer-icon {
+  width: 24px;
+  height: 24px;
   fill: #f4f4fd;
 }
 
